[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
gethostname = "0.2.3"
clap = { version = "3.2.8", features = ["derive"] }
hyper = { version = "0.14", features = ["tcp", "http1", "server", "stream"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }